2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (tracker_crawler_start): Changed
	jthe default location to $HOME from some testing directory of mine.

2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-main.c: Removed commented out code.
	
	* src/trackerd/tracker-crawler.c: Renamed internal functions
	better and fixed a nasty crasher because we weren't NULL
	terminating the GStrv we send to the indexer to process.
	
	* src/trackerd/tracker-main.c: Don't initiate and shutdown the
	process-files module, it is no longer used. Also make sure we
	shutdown properly when using Ctrl+C. Now when we initiate the db
	manager we set the attach_all to TRUE now that Carlos has fixed
	that bug. This means we use one connection for all transactions in
	the daemon now.
	
2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Make sure we set the ignored
	file types each time the TrackerConfig object is set for the
	TrackerCrawler. This fixes the warning about TrackConfig not
	existing for tracker_config_get_no_index_file_types().
	
	* src/trackerd/tracker-main.c: Removed the initial sleep from the
	daemon, this is only meant for the indexer which implements the
	feature and this also means that we don't respond to dbus events
	in that interval.

2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]: Added a _stop() function and
	also iterate main context events after each file is iterated. This
	means we respond to DBus events. Fixed a nasty crash where we were
	fixing static strings added to the database when the
	TrackerCrawler was created.
	
	* src/trackerd/tracker-daemon.c: Changed message from "restarting" to
	"shuting down" when shutting down the daemon.
	
	* src/trackerd/tracker-main.[ch]: Create the crawler in the
	Tracker struct so the shutdown function can stop it immediately.

2008-06-10  Martyn Russell  <martyn@imendio.com>
